workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/Dado_do_Administrador__c.object-meta.xml
<CustomObject>
    <label>Dados dos Administradores</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados dos Administradores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>