workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/fields/cpf__c.field-meta.xml
<CustomField>
    <fullName>cpf__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>