workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/fields/Numero_de_documentao__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documentao__c</fullName>
    <label>Número de documentação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>