workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/fields/PEP_ou_Relacionada_de_PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP_ou_Relacionada_de_PEP__c</fullName>
    <label>PEP ou Relacionada de PEP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Nao</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>