workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profissão</label>
    <referenceTo>Profissao__c</referenceTo>
    <relationshipLabel>Dados dos Administradores</relationshipLabel>
    <relationshipName>Dados_dos_Administradores</relationshipName>
    <type>Lookup</type>
</CustomField>