workspace-sf/force-app/main/default/objects/Dado_do_Administrador__c/fields/Tipo_Doc_Identificao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Doc_Identificao__c</fullName>
    <label>Tipo Doc Identificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RG</fullName>
                <label>R.G</label>
            </value>
            <value>
                <fullName>RNE</fullName>
                <label>R.N.E.</label>
            </value>
            <value>
                <fullName>Passaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>